# sphere-wars

./: .gitignore  Cargo.toml  Makefile  README.md
client/: Cargo.toml
client/src/: cli.rs  connection.rs  main.rs  network.rs
client/src/components/: maze.rs  mod.rs  network.rs  projectile.rs  ui.rs  world.rs
client/src/net/: connection.rs  mod.rs  network.rs
client/src/plugins/: mod.rs  network.rs  player.rs  ui.rs  world.rs
client/src/systems/: mod.rs
client/src/systems/player/: camera.rs  mod.rs  physics.rs  respawn.rs  setup.rs  shooting.rs
client/src/systems/ui/: death_screen.rs  mod.rs
client/src/systems/utils/: mod.rs  shutdown.rs
client/src/systems/world/: lights.rs  maze.rs  mod.rs  setup.rs
client/src/systems/world/ui/: crosshairs.rs  fps.rs  minimap.rs  mod.rs
scripts/: build.ps1  build.sh  conn.sh
server/: Cargo.toml
server/src/: cli.rs  main.rs  server.rs  utils.rs
shared/: Cargo.toml
shared/src/: lib.rs  maze.rs  messages.rs  player.rs
src/: main.rs
src/components/: player.rs  world.rs
src/player/: mod.rs  plugin.rs
src/player/systems/: camera.rs  physics.rs  setup.rs
src/plugins/: mod.rs  player.rs  world.rs
src/systems/: mod.rs
src/systems/player/: camera.rs  mod.rs  physics.rs
src/systems/utils/: mod.rs
src/systems/world/: maze.rs  mod.rs  setup.rs
src/systems/world/ui/: crosshairs.rs  fps.rs  minimap.rs  mod.rs
src/world/: mod.rs
