[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["jpeg"] }
rand = "0.9.1"
shared = { path = "../shared" }
tokio = { version = "1.32", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }

ctrlc = "3.4"
dialoguer = "0.11"
bincode = { version = "2.0.1", features = ["serde"] }
