[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
clap = { version = "4.5.40", features = ["derive"] }
shared = { path = "../shared" }
serde = "1.0.219"
serde_json = "1.0.140"
glam = "0.25.0"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
