[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
clap = { version = "4.5.40", features = ["derive"] }
shared = { path = "../shared" }
serde = "1.0.219"

bevy = { version = "0.16.1", features = ["jpeg"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
bincode = { version = "2.0.1", features = ["serde"] }
rand = "0.8"
get_if_addrs = "0.5.3"
